--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1584,10 +1584,6 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1682,10 +1678,6 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
@@ -1794,8 +1786,19 @@ body {
     width: 100% !important;
   }
 }
+.cid-rkrsxloT6p {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #efefef;
+}
+.cid-rkrsxloT6p P {
+  color: #767676;
+}
+.cid-rkrsxloT6p H1 {
+  color: #271200;
+}
 .cid-rkkqEaZQ8w {
-  padding-top: 90px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #efefef;
 }
@@ -1873,6 +1876,144 @@ body {
 .cid-rkksB50Y6a .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-rkrpLFZVk0 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rkrpLFZVk0 h2 {
+  text-align: left;
+}
+.cid-rkrpLFZVk0 h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rkrpLFZVk0 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rkrpLFZVk0 .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rkrpLFZVk0 .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rkrpLFZVk0 .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rkrpLFZVk0 .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rkrpLFZVk0 .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rkrpLFZVk0 .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rkrpLFZVk0 .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rkrpLFZVk0 .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rkrpLFZVk0 .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rkrpLFZVk0 B {
+  color: #271200;
+}
+.cid-rkrrnBEAGc {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rkrrnBEAGc h2 {
+  text-align: left;
+}
+.cid-rkrrnBEAGc h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rkrrnBEAGc p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rkrrnBEAGc .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rkrrnBEAGc .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rkrrnBEAGc .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rkrrnBEAGc .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rkrrnBEAGc .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rkrrnBEAGc .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rkrrnBEAGc .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rkrrnBEAGc .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rkrrnBEAGc .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rkrrnBEAGc B {
+  color: #271200;
+}
+.cid-rkrrVC8MmG {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rkrrVC8MmG P {
+  color: #767676;
 }
 .cid-rkkyUZyVt1 .navbar {
   background: #ffffff;
@@ -2109,10 +2250,6 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2207,10 +2344,6 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
@@ -2634,10 +2767,6 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2732,10 +2861,6 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
@@ -3119,10 +3244,6 @@ body {
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3217,10 +3338,6 @@ body {
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-buttons {
