--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1300,7 +1300,7 @@ body {
 .cid-rkkCxGeZ45 {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkkCxGeZ45 h4 {
   font-weight: 500;
@@ -1329,7 +1329,7 @@ body {
 .cid-rkqwi0a3lm {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkqwi0a3lm .line {
   background-color: #149dcc;
@@ -1744,7 +1744,7 @@ body {
 .cid-rkkpMkDkSE {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkkpMkDkSE .mbr-figure {
   margin: 0 auto;
@@ -1763,13 +1763,13 @@ body {
   }
 }
 .cid-rkkqdmTgv6 {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-rkkqdmTgv6 .line {
-  background-color: #271200;
-  color: #271200;
+  background-color: #149dcc;
+  color: #149dcc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1789,7 +1789,7 @@ body {
 .cid-rkrsxloT6p {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkrsxloT6p P {
   color: #767676;
@@ -1800,7 +1800,7 @@ body {
 .cid-rkkqEaZQ8w {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkkqEaZQ8w .card-box {
   padding: 0 2rem;
@@ -1837,10 +1837,13 @@ body {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-rkkqEaZQ8w .card-title B {
+  color: #271200;
+}
 .cid-rkksB50Y6a {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-color: #ffffff;
 }
 .cid-rkksB50Y6a .card-box {
   padding: 0 2rem;
@@ -1877,9 +1880,12 @@ body {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
+.cid-rkksB50Y6a .card-title B {
+  color: #271200;
+}
 .cid-rkrpLFZVk0 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
 .cid-rkrpLFZVk0 h2 {
@@ -1943,9 +1949,9 @@ body {
   color: #271200;
 }
 .cid-rkrrnBEAGc {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
 }
 .cid-rkrrnBEAGc h2 {
   text-align: left;
@@ -2410,7 +2416,7 @@ body {
 .cid-rkkpMkDkSE {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkpMkDkSE .mbr-figure {
   margin: 0 auto;
@@ -2431,11 +2437,11 @@ body {
 .cid-rkkqdmTgv6 {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkqdmTgv6 .line {
-  background-color: #271200;
-  color: #271200;
+  background-color: #149dcc;
+  color: #149dcc;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -2455,7 +2461,7 @@ body {
 .cid-rkkqEaZQ8w {
   padding-top: 90px;
   padding-bottom: 0px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkqEaZQ8w .card-box {
   padding: 0 2rem;
@@ -2495,7 +2501,7 @@ body {
 .cid-rkksB50Y6a {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkksB50Y6a .card-box {
   padding: 0 2rem;
@@ -2927,7 +2933,7 @@ body {
 .cid-rkkpMkDkSE {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkpMkDkSE .mbr-figure {
   margin: 0 auto;
@@ -2948,7 +2954,7 @@ body {
 .cid-rkkqdmTgv6 {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkqdmTgv6 .line {
   background-color: #271200;
@@ -2972,7 +2978,7 @@ body {
 .cid-rkkqEaZQ8w {
   padding-top: 90px;
   padding-bottom: 0px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkqEaZQ8w .card-box {
   padding: 0 2rem;
@@ -3404,7 +3410,7 @@ body {
 .cid-rkkKRtmKrC {
   padding-top: 120px;
   padding-bottom: 60px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkKRtmKrC .mbr-section-subtitle {
   color: #271200;
@@ -3418,7 +3424,7 @@ body {
 .cid-rkkKpHGIOw {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #cccccc;
+  background-color: #ffffff;
 }
 .cid-rkkKpHGIOw .mbr-slider .carousel-control {
   background: #1b1b1b;
