--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1584,6 +1584,10 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1679,6 +1683,10 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1763,8 +1771,8 @@ body {
   }
 }
 .cid-rkkqdmTgv6 {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 75px;
+  padding-bottom: 75px;
   background-color: #ffffff;
 }
 .cid-rkkqdmTgv6 .line {
@@ -1786,9 +1794,56 @@ body {
     width: 100% !important;
   }
 }
+.cid-rkNDNgLHMV {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rkNDNgLHMV P {
+  color: #767676;
+}
+.cid-rkNDNgLHMV H1 {
+  color: #271200;
+}
+.cid-rkNDVJ4QPS {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rkNDVJ4QPS .counter-container {
+  color: #767676;
+}
+.cid-rkNDVJ4QPS .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rkNDVJ4QPS .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rkNDVJ4QPS .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rkNDVJ4QPS .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .cid-rkrsxloT6p {
-  padding-top: 0px;
-  padding-bottom: 15px;
+  padding-top: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rkrsxloT6p P {
@@ -1862,6 +1917,9 @@ body {
 .cid-rkrpLFZVk0 B {
   color: #271200;
 }
+.cid-rkrpLFZVk0 H4 {
+  color: #271200;
+}
 .cid-rkrrnBEAGc {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -1925,6 +1983,88 @@ body {
   }
 }
 .cid-rkrrnBEAGc B {
+  color: #271200;
+}
+.cid-rkrrnBEAGc H4 {
+  color: #271200;
+}
+.cid-rkNIVr4yWe {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rkNIVr4yWe h2 {
+  text-align: left;
+}
+.cid-rkNIVr4yWe h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rkNIVr4yWe p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rkNIVr4yWe .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rkNIVr4yWe .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rkNIVr4yWe .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rkNIVr4yWe .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rkNIVr4yWe .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rkNIVr4yWe .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rkNIVr4yWe .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rkNIVr4yWe .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rkNIVr4yWe .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rkNIVr4yWe B {
+  color: #271200;
+}
+.cid-rkNIVr4yWe H4 {
+  color: #271200;
+}
+.cid-rkNKqIyW4u {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rkNKqIyW4u P {
+  color: #767676;
+}
+.cid-rkNKqIyW4u H1 {
   color: #271200;
 }
 .cid-rkkqEaZQ8w {
@@ -2299,6 +2439,10 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2393,6 +2537,10 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
@@ -2787,6 +2935,10 @@ body {
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkyUZyVt1 .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2881,6 +3033,10 @@ body {
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rkkyUZyVt1 .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkyUZyVt1 .navbar-collapse.show .navbar-buttons {
@@ -3264,6 +3420,10 @@ body {
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3358,6 +3518,10 @@ body {
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-buttons {
@@ -3710,6 +3874,10 @@ body {
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-rkkAhIV2Zj .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -3804,6 +3972,10 @@ body {
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
+  }
+  .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
   }
   .cid-rkkAhIV2Zj .navbar-collapse.collapsing .navbar-buttons,
   .cid-rkkAhIV2Zj .navbar-collapse.show .navbar-buttons {
