--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1308,8 +1308,37 @@ body {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow {
   border-top-color: #149dcc;
 }
+.cid-rnJiwiLQiP {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnJiwiLQiP h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rnJiwiLQiP p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnJiwiLQiP .card-box {
+  padding-top: 2rem;
+}
+.cid-rnJiwiLQiP .card-wrapper {
+  height: 100%;
+}
+.cid-rnJiwiLQiP B {
+  color: #271200;
+}
+.cid-rnJiwiLQiP .card-title B {
+  color: #271200;
+}
+.cid-rnJiwiLQiP P {
+  color: #271200;
+}
 .cid-rkkCxGeZ45 {
-  padding-top: 90px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
@@ -2215,6 +2244,10 @@ body {
 .cid-rkrrVC8MmG P {
   color: #767676;
 }
+.cid-rkrrVC8MmG .mbr-text,
+.cid-rkrrVC8MmG .mbr-section-btn {
+  color: #271200;
+}
 .cid-rkkyUZyVt1 .navbar {
   background: #ffffff;
   transition: none;
@@ -2660,6 +2693,53 @@ body {
     width: 100% !important;
   }
 }
+.cid-rnJvhZiHBK {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnJvhZiHBK P {
+  color: #767676;
+}
+.cid-rnJvhZiHBK H1 {
+  color: #271200;
+}
+.cid-rnJvcks7bH {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rnJvcks7bH .counter-container {
+  color: #767676;
+}
+.cid-rnJvcks7bH .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rnJvcks7bH .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rnJvcks7bH .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rnJvcks7bH .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 .cid-rkIWnmX5UT {
   padding-top: 0px;
   padding-bottom: 15px;
@@ -2710,6 +2790,21 @@ body {
 .cid-rkkqEaZQ8w .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
+}
+.cid-rkkqEaZQ8w .card-title {
+  color: #271200;
+}
+.cid-rnJyxNyeGK {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnJyxNyeGK P {
+  color: #767676;
+}
+.cid-rnJyxNyeGK .mbr-text,
+.cid-rnJyxNyeGK .mbr-section-btn B {
+  color: #271200;
 }
 .cid-rkkyUZyVt1 .navbar {
   background: #ffffff;
@@ -3111,90 +3206,205 @@ body {
 .cid-rkkyUZyVt1 .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-rkkpMkDkSE {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rnJzOs30fe {
+  padding-top: 75px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rkkpMkDkSE .mbr-figure {
-  margin: 0 auto;
-  width: 100%;
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
+.cid-rnJzOs30fe P {
+  color: #767676;
 }
-.cid-rkkpMkDkSE .mbr-figure img {
-  height: 100%;
-  margin: 0 auto;
-}
-@media (max-width: 991px) {
-  .cid-rkkpMkDkSE .mbr-figure img {
-    width: 100% !important;
-  }
-}
-.cid-rkkqdmTgv6 {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-rkkqdmTgv6 .line {
-  background-color: #271200;
+.cid-rnJzOs30fe H1 {
   color: #271200;
+}
+.cid-rnJzuzqyWB {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-rnJzuzqyWB .line {
+  background-color: #149dcc;
+  color: #149dcc;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
-.cid-rkkqdmTgv6 .section-text {
+.cid-rnJzuzqyWB .section-text {
   padding: 2rem 0;
   color: #271200;
 }
-.cid-rkkqdmTgv6 .inner-container {
+.cid-rnJzuzqyWB .inner-container {
   margin: 0 auto;
 }
 @media (max-width: 768px) {
-  .cid-rkkqdmTgv6 .inner-container {
+  .cid-rnJzuzqyWB .inner-container {
     width: 100% !important;
   }
 }
-.cid-rkkqEaZQ8w {
-  padding-top: 90px;
+.cid-rnJAXqYDQJ {
+  padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
-.cid-rkkqEaZQ8w .card-box {
-  padding: 0 2rem;
-}
-.cid-rkkqEaZQ8w .mbr-section-btn {
-  padding-top: 1rem;
-}
-.cid-rkkqEaZQ8w .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
-}
-.cid-rkkqEaZQ8w h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
-}
-.cid-rkkqEaZQ8w p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-rkkqEaZQ8w .mbr-text {
+.cid-rnJAXqYDQJ P {
   color: #767676;
 }
-.cid-rkkqEaZQ8w .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
+.cid-rnJAXqYDQJ H1 {
+  color: #271200;
 }
-.cid-rkkqEaZQ8w .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-rnJAYl99BZ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnJAYl99BZ h2 {
+  text-align: left;
+}
+.cid-rnJAYl99BZ h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnJAYl99BZ p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnJAYl99BZ .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnJAYl99BZ .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnJAYl99BZ .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnJAYl99BZ .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnJAYl99BZ .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnJAYl99BZ .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnJAYl99BZ .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnJAYl99BZ .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnJAYl99BZ .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnJAYl99BZ B {
+  color: #271200;
+}
+.cid-rnJAYl99BZ H4 {
+  color: #271200;
+}
+.cid-rnJAYl99BZ P {
+  color: #271200;
+}
+.cid-rnJFNevWuW {
+  padding-top: 45px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnJFNevWuW h2 {
+  text-align: left;
+}
+.cid-rnJFNevWuW h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnJFNevWuW p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnJFNevWuW .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnJFNevWuW .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnJFNevWuW .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnJFNevWuW .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnJFNevWuW .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnJFNevWuW .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnJFNevWuW .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnJFNevWuW .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnJFNevWuW .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnJFNevWuW B {
+  color: #271200;
+}
+.cid-rnJFNevWuW H4 {
+  color: #271200;
+}
+.cid-rnJFNevWuW P {
+  color: #271200;
+}
+.cid-rnJHCpKLUN {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnJHCpKLUN P {
+  color: #767676;
+}
+.cid-rnJHCpKLUN .mbr-text,
+.cid-rnJHCpKLUN .mbr-section-btn B {
+  color: #271200;
 }
 .cid-rkkAhIV2Zj .navbar {
   background: #ffffff;
@@ -3611,8 +3821,8 @@ body {
   color: #271200;
 }
 .cid-rkIzcS1GU6 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rkIzcS1GU6 .card-box {
@@ -3647,6 +3857,46 @@ body {
   transition: box-shadow 0.3s;
 }
 .cid-rkIzcS1GU6 .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rnJM480phj {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rnJM480phj .card-box {
+  padding: 0 2rem;
+}
+.cid-rnJM480phj .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rnJM480phj .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rnJM480phj h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rnJM480phj p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rnJM480phj .mbr-text {
+  color: #767676;
+}
+.cid-rnJM480phj .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rnJM480phj .card-wrapper:hover {
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
   transition: box-shadow 0.3s;
 }
