--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3395,8 +3395,8 @@ body {
   color: #271200;
 }
 .cid-rnJHCpKLUN {
-  padding-top: 45px;
-  padding-bottom: 30px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rnJHCpKLUN P {
@@ -3404,6 +3404,336 @@ body {
 }
 .cid-rnJHCpKLUN .mbr-text,
 .cid-rnJHCpKLUN .mbr-section-btn B {
+  color: #271200;
+}
+.cid-rnPteQ76HN {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnPteQ76HN P {
+  color: #767676;
+}
+.cid-rnPteQ76HN H1 {
+  color: #271200;
+}
+.cid-rnPtfxVZuE {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnPtfxVZuE h2 {
+  text-align: left;
+}
+.cid-rnPtfxVZuE h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnPtfxVZuE p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnPtfxVZuE .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnPtfxVZuE .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnPtfxVZuE .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnPtfxVZuE .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnPtfxVZuE .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnPtfxVZuE .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnPtfxVZuE .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnPtfxVZuE .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnPtfxVZuE .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnPtfxVZuE B {
+  color: #271200;
+}
+.cid-rnPtfxVZuE H4 {
+  color: #271200;
+}
+.cid-rnPtfxVZuE P {
+  color: #271200;
+}
+.cid-rnPy6svKOU {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnPy6svKOU h2 {
+  text-align: left;
+}
+.cid-rnPy6svKOU h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnPy6svKOU p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnPy6svKOU .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnPy6svKOU .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnPy6svKOU .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnPy6svKOU .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnPy6svKOU .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnPy6svKOU .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnPy6svKOU .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnPy6svKOU .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnPy6svKOU .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnPy6svKOU B {
+  color: #271200;
+}
+.cid-rnPy6svKOU H4 {
+  color: #271200;
+}
+.cid-rnPy6svKOU P {
+  color: #271200;
+}
+.cid-rnPtg6Q8bv {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnPtg6Q8bv P {
+  color: #767676;
+}
+.cid-rnPtg6Q8bv .mbr-text,
+.cid-rnPtg6Q8bv .mbr-section-btn B {
+  color: #271200;
+}
+.cid-rnPBKTGSq4 {
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnPBKTGSq4 P {
+  color: #767676;
+}
+.cid-rnPBKTGSq4 H1 {
+  color: #271200;
+}
+.cid-rnPBLKlNQr {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnPBLKlNQr h2 {
+  text-align: left;
+}
+.cid-rnPBLKlNQr h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnPBLKlNQr p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnPBLKlNQr .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnPBLKlNQr .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnPBLKlNQr .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnPBLKlNQr .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnPBLKlNQr .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnPBLKlNQr .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnPBLKlNQr .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnPBLKlNQr .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnPBLKlNQr .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnPBLKlNQr B {
+  color: #271200;
+}
+.cid-rnPBLKlNQr H4 {
+  color: #271200;
+}
+.cid-rnPBLKlNQr P {
+  color: #271200;
+}
+.cid-rnPBMPjqOT {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnPBMPjqOT h2 {
+  text-align: left;
+}
+.cid-rnPBMPjqOT h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnPBMPjqOT p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnPBMPjqOT .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnPBMPjqOT .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnPBMPjqOT .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnPBMPjqOT .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnPBMPjqOT .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnPBMPjqOT .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnPBMPjqOT .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnPBMPjqOT .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnPBMPjqOT .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnPBMPjqOT B {
+  color: #271200;
+}
+.cid-rnPBMPjqOT H4 {
+  color: #271200;
+}
+.cid-rnPBMPjqOT P {
+  color: #271200;
+}
+.cid-rnPBMiIvuL {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rnPBMiIvuL P {
+  color: #767676;
+}
+.cid-rnPBMiIvuL .mbr-text,
+.cid-rnPBMiIvuL .mbr-section-btn B {
   color: #271200;
 }
 .cid-rkkAhIV2Zj .navbar {
