--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2096,6 +2096,74 @@ body {
 .cid-rkNIVr4yWe H4 {
   color: #271200;
 }
+.cid-rnUIQ94LyF {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rnUIQ94LyF h2 {
+  text-align: left;
+}
+.cid-rnUIQ94LyF h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-rnUIQ94LyF p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rnUIQ94LyF .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-rnUIQ94LyF .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rnUIQ94LyF .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rnUIQ94LyF .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rnUIQ94LyF .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rnUIQ94LyF .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rnUIQ94LyF .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rnUIQ94LyF .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rnUIQ94LyF .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rnUIQ94LyF B {
+  color: #271200;
+}
+.cid-rnUIQ94LyF H4 {
+  color: #271200;
+}
 .cid-rkNKqIyW4u {
   padding-top: 30px;
   padding-bottom: 0px;
